# remoterg

./: .gitignore  AGENTS.md  CLAUDE.md  GEMINI.md  NOTE.md  SPEC.md  Taskfile.yml  WEBRTC_DEBUG_NOTES.md  dump.txt
.agent/rules/: all.md  client-apps-mobile.md  client-structure.md  rust-check.md  rust-crate.md  web-tanstack-start.md
.claude/: settings.local.json
.cursor/rules/: rust-check.mdc  rust-crate.mdc  web-tanstack-start.mdc
client/: README.md  package.json  pnpm-lock.yaml
client/apps/mobile/: app.json  package.json
client/apps/mobile/app/: index.tsx
client/apps/mobile/app/(tabs)/: index.tsx
client/apps/mobile/features/viewer/: index.tsx
client/apps/mobile/features/viewer/components/: ConnectForm.tsx  VideoPlayer.tsx
client/apps/mobile/features/viewer/hooks/: useViewer.ts
client/apps/web/: .cta.json  .oxlintrc.json  README.md  package.json  vite.config.ts  worker-configuration.d.ts
client/apps/web/src/: env.ts  routeTree.gen.ts  styles.css
client/apps/web/src/components/: theme-toggle.tsx
client/apps/web/src/components/ui/: badge.tsx  button.tsx  card.tsx  dialog.tsx  input.tsx  label.tsx  popover.tsx  radio-group.tsx  scroll-area.tsx  slider.tsx  switch.tsx
client/apps/web/src/components/viewer/: gallery-modal.tsx  settings-modal.tsx  viewer-overlay.tsx
client/apps/web/src/lib/: demo-store-devtools.tsx  use-webrtc.ts
client/apps/web/src/lib/webrtc/: README.md  connection.ts  signaling.ts
client/apps/web/src/routes/: __root.tsx  index.tsx  viewer.$sessionId.$codec.tsx
client/apps/web/src/signaling/: message-handler.ts  session-state.ts  session.ts  types.ts  websocket-handler.ts
desktop/Ui/: App.xaml  App.xaml.cs  MainWindow.xaml  MainWindow.xaml.cs  Package.appxmanifest  Ui.csproj  Ui.sln  app.manifest
desktop/services/: .env.local  .gitignore  Cargo.toml  README.md
desktop/services/audio-capture/: .gitignore  Cargo.toml
desktop/services/audio-capture-mock/: .gitignore  Cargo.toml  README.md
desktop/services/audio-capture-mock/src/: lib.rs
desktop/services/audio-capture-mock/tests/: audio_capture_mock_test.rs
desktop/services/audio-capture/src/: lib.rs
desktop/services/audio-capture/tests/: audio_capture_service_real.rs
desktop/services/audio-encoder/: Cargo.toml
desktop/services/audio-encoder/opus-sys/: wrapper.h
desktop/services/audio-encoder/src/: lib.rs
desktop/services/audio-encoder/tests/: opus_encoder_test.rs
desktop/services/audio-stream/: Cargo.toml
desktop/services/audio-stream/src/: lib.rs
desktop/services/capture/: Cargo.toml
desktop/services/capture/benches/: capture_bench.rs
desktop/services/capture/src/: lib.rs
desktop/services/capture/tests/: capture_service_real.rs
desktop/services/capturemock/: Cargo.toml
desktop/services/capturemock/src/: lib.rs
desktop/services/core/: Cargo.toml
desktop/services/core/src/: lib.rs
desktop/services/encoder/: Cargo.toml
desktop/services/encoder/benches/: encoder_bench.rs
desktop/services/encoder/libyuv-sys/: Cargo.toml  build.rs  wrapper.h
desktop/services/encoder/libyuv-sys/src/: lib.rs
desktop/services/encoder/libyuv-sys/tests/: conversion_test.rs
desktop/services/encoder/src/: h264_mf.rs  lib.rs  vp8_vpx.rs  vp9_vpx.rs  vpx_common.rs
desktop/services/encoder/src/h264/: annexb.rs  mmf.rs  mmf_test.rs  mod.rs  openh264.rs  rgba_to_yuv.rs
desktop/services/encoder/src/h264/mmf/: d3d.rs  encoder.rs  mf.rs  mod.rs  pipeline.rs  preprocessor.rs
desktop/services/hostd/: Cargo.toml  screen_share_flow.mmd
desktop/services/hostd/src/: main.rs
desktop/services/input/: Cargo.toml
desktop/services/input/src/: lib.rs
desktop/services/opus-sys/: Cargo.toml  build.rs
desktop/services/signaling/: Cargo.toml
desktop/services/signaling/src/: client.rs  lib.rs
desktop/services/tagger/: Cargo.toml
desktop/services/tagger-setup/: Cargo.toml
desktop/services/tagger-setup/src/: lib.rs
desktop/services/tagger/src/: lib.rs
desktop/services/tests/: Cargo.toml  capture_encode_integration.rs
desktop/services/video-capture/: Cargo.toml
desktop/services/video-capture-mock/: Cargo.toml
desktop/services/video-capture-mock/src/: lib.rs
desktop/services/video-capture/benches/: capture_bench.rs  video_capture_bench.rs
desktop/services/video-capture/src/: lib.rs
desktop/services/video-capture/tests/: capture_service_real.rs
desktop/services/video-stream/: Cargo.toml
desktop/services/video-stream/src/: frame_processor.rs  lib.rs  track_writer.rs
desktop/services/web/: index.html
desktop/services/webrtc/: Cargo.toml
desktop/services/webrtc/src/: connection.rs  frame_handler.rs  lib.rs  track_writer.rs
docs/: 01_user_flow.md
docs/spec/: screenshot.md
web/: .cta.json  .gitignore  .knip.jsonc  README.md  instrument.server.mjs  package.json  playwright.config.ts  pnpm-lock.yaml  tsconfig.json  vite.config.ts  wrangler.jsonc
web/e2e/: connection.spec.ts
web/scripts/: e2e-test.ts
web/src/: routeTree.gen.ts  router.tsx  styles.css  worker.ts
web/src/components/: Header.tsx  example-AIAssistant.tsx  example-GuitarRecommendation.tsx  theme-toggle.tsx
web/src/components/viewer/: gallery-modal.tsx  viewer-overlay.tsx
web/src/data/: example-guitars.ts
web/src/lib/: example.guitar-tools.ts  use-theme.ts  use-webrtc.ts
web/src/lib/webrtc/: data-channel.ts  stats.ts
web/src/routes/: __root.tsx  index.tsx  viewer.$sessionId.$codec.tsx  viewer.tsx
web/src/routes/api/: signal.ts
web/src/routes/demo/: api.tanchat.ts  sentry.testing.tsx  start.ssr.spa-mode.tsx  tanchat.css  tanchat.tsx  tanstack-query.tsx
web/src/routes/example.guitars/: $guitarId.tsx  index.tsx
web/src/signaling/: logger.ts  session-state.ts  session.ts  types.ts  websocket-handler.ts
