[workspace]

members = [
  "core",
  "encoder",
  "capture",
  "capturemock",
  "signaling",
  "webrtc",
  "input",
  "hostd",
  "tests",
  "audio-capture",
  "audio-capture-mock",
  "audio-encoder",
  "audio-encoder/opus-sys",
  "audio-stream",
  "video-stream",
]

resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"

[workspace.dependencies]
tokio = { version = "1.40", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
