[package]
name = "audio-capture-mock"
version.workspace = true
edition.workspace = true

[dependencies]
tokio = { workspace = true }
tracing = { workspace = true }
anyhow = { workspace = true }
core-types = { path = "../core" }
hound = "3.5"
windows-sys = { version = "0.59", features = ["Win32_Media"] }

[dev-dependencies]
tracing-subscriber = { workspace = true }
