[package]
name = "audio-capture"
version.workspace = true
edition.workspace = true

[dependencies]
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
anyhow = { workspace = true }
core-types = { path = "../core" }
windows-core = "0.62.2"
windows = { version = "0.62.2", features = [
    "Win32_Foundation",
    "Win32_Security",
    "Win32_System_Com",
    "Win32_System_Com_StructuredStorage",
    "Win32_System_Variant",
    "Win32_System_Threading",
    "Win32_Media_Audio",
    "Win32_Media_Multimedia",
    "Win32_UI_WindowsAndMessaging",
    "Win32_System_Performance",
] }

[dev-dependencies]
hound = "3.5"

