[package]
name = "encoder"
version.workspace = true
edition.workspace = true

[features]
default = ["h264"]
h264 = ["openh264"]
vp9 = ["vpx-rs"]

[dependencies]
anyhow = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
openh264 = { version = "0.9", optional = true }
vpx-rs = { version = "0.2.1", optional = true }
core-types = { path = "../core" }

