[package]
name = "encoder"
version.workspace = true
edition.workspace = true

[features]
default = ["vp8", "vp9", "h264"]
h264 = ["openh264", "rayon", "windows", "libyuv-sys"]
vp8 = ["vpx-rs"]
vp9 = ["vpx-rs"]

[dependencies]
anyhow = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
openh264 = { version = "0.9", optional = true }
vpx-rs = { version = "0.2.1", optional = true }
core-types = { path = "../core" }
libyuv-sys = { path = "libyuv-sys", optional = true }
rayon = { version = "1.8", optional = true }
windows = { version = "0.62.2", optional = true, features = [
    "Win32_Media",
    "Win32_Media_MediaFoundation",
    "Win32_System_Com",
    "Win32_Graphics_Direct3D",
    "Win32_Graphics_Direct3D11",
    "Win32_Graphics_Dxgi",
    "Win32_Graphics_Dxgi_Common",
] }

[dev-dependencies]
criterion = { version = "0.8.1", features = ["html_reports", "async_tokio"] }

[[bench]]
name = "encoder_bench"
harness = false

