[package]
name = "encoder"
version.workspace = true
edition.workspace = true

[features]
default = ["h264"]
h264 = ["openh264", "rayon", "windows", "libyuv-sys"]

[dependencies]
anyhow = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
openh264 = { version = "0.9", optional = true }
core-types = { path = "../core" }
libyuv-sys = { path = "libyuv-sys", optional = true }
rayon = { version = "1.8", optional = true }
windows = { version = "0.62.2", optional = true, features = [
    "Win32_Media",
    "Win32_Media_MediaFoundation",
    "Win32_System_Com",
    "Win32_System_Ole",
    "Win32_System_Variant",
    "Win32_Graphics_Direct3D",
    "Win32_Graphics_Direct3D_Fxc",
    "Win32_Graphics_Direct3D11",
    "Win32_Graphics_Dxgi",
    "Win32_Graphics_Dxgi_Common",
] }

[dev-dependencies]
criterion = { version = "0.8.1", features = ["html_reports", "async_tokio"] }

[[bench]]
name = "encoder_bench"
harness = false

