[package]
name = "hostd"
version.workspace = true
edition.workspace = true

[[bin]]
name = "hostd"
path = "src/main.rs"

[dependencies]
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
anyhow = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
video-capture = { path = "../video-capture" }
video-capture-mock = { path = "../video-capture-mock" }
signaling = { path = "../signaling" }
webrtc = { path = "../webrtc" }
encoder = { path = "../encoder" }
input = { path = "../input" }
core-types = { path = "../core" }
audio-capture = { path = "../audio-capture" }
audio-capture-mock = { path = "../audio-capture-mock" }
audio-encoder = { path = "../audio-encoder" }
audio-stream = { path = "../audio-stream" }
video-stream = { path = "../video-stream" }
webrtc-rs = { package = "webrtc", version = "0.14" }
clap = { version = "4.5", features = ["derive"] }

[features]
default = ["h264"]
h264 = ["encoder/h264"]
