[package]
name = "input"
version.workspace = true
edition.workspace = true

[dependencies]
tokio = { workspace = true }
tracing = { workspace = true }
anyhow = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
core-types = { path = "../core" }
tagger = { path = "../tagger" }
image = "0.24"
uuid = { version = "1.0", features = ["v4"] }

