[package]
name = "signaling"
version.workspace = true
edition.workspace = true

[dependencies]
tokio = { workspace = true }
axum = { version = "0.7", features = ["ws", "macros"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["fs"] }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
anyhow = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
futures = "0.3"
core-types = { path = "../core" }

