[package]
name = "signaling"
version.workspace = true
edition.workspace = true

[dependencies]
tokio = { workspace = true }
tokio-tungstenite = { version = "0.27", features = ["native-tls"] }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
anyhow = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
futures = "0.3"
core-types = { path = "../core" }
url = "2.5"

