[package]
name = "tagger-setup"
version.workspace = true
edition.workspace = true

[dependencies]
anyhow = { workspace = true }
tokio = { workspace = true, features = ["process", "fs", "io-util"] }
tracing = { workspace = true }
windows = { workspace = true, features = ["Win32_System_JobObjects", "Win32_Foundation", "Win32_System_Threading", "Win32_Security"] }
