[package]
name = "tagger"
version.workspace = true
edition.workspace = true

[dependencies]
anyhow = { workspace = true }
reqwest = { version = "0.12", features = ["json"] }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
base64 = "0.22"
core-types = { path = "../core" }
