[package]
name = "integration-tests"
version.workspace = true
edition.workspace = true

[[test]]
name = "capture_encode_integration"
path = "capture_encode_integration.rs"

[dependencies]
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
anyhow = { workspace = true }
core-types = { path = "../core" }
video-capture = { path = "../video-capture" }
encoder = { path = "../encoder", features = ["h264"] }
windows-capture = "2.0.0-alpha.7"

[dev-dependencies]
windows = { workspace = true, features = [
    "Win32_Foundation",
    "Win32_UI_WindowsAndMessaging",
] }

