[package]
name = "video-capture"
version.workspace = true
edition.workspace = true

[dependencies]
tokio = { workspace = true }
tracing = { workspace = true }
anyhow = { workspace = true }
core-types = { path = "../core" }
windows-capture = "2.0.0-alpha.7"
windows = { version = "0.62.2", features = [
    "Win32_Foundation",
    "Win32_UI_WindowsAndMessaging",
] }

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
image = "0.25"

[[bench]]
name = "video_capture_bench"
harness = false
