[package]
name = "webrtc"
version.workspace = true
edition.workspace = true

[dependencies]
tokio = { workspace = true }
tracing = { workspace = true }
anyhow = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
async-trait = "0.1"
capture = { path = "../capture" }
webrtc-rs = { package = "webrtc", version = "0.14" }
webrtc-media = "0.11"
openh264 = "0.4"
bytes = "1.0"

